[package]
name = "wsmq2"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "^0.13.0"
actix-web = "4"
actix-web-actors = "4.2.0"
actix-http="^3.3.1"
sled = "^0.34.7"
lazy_static = "^1.4.0"
# JSON 支持 
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
actix-rt = "1.0.0"
chrono = "^0.4.24"